...
            VideoView(context).apply {
              videoViewRef = this
              setOnPreparedListener(preparedListener)
              setOnErrorListener(errorListener)
              setOnInfoListener(infoListener)
              setVideoURI(Uri.parse(mediaUrl))
              tag = mediaUrl
              start()
            }
          },
          modifier = Modifier.fillMaxSize())
    }

...
